syntax = "proto3";

package workflow.v1;

option go_package = "github.com/souleb/buildeploy/proto/workflow/v1";

//import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service WorkflowService {
  rpc CreateWorkflow(CreateWorkflowRequest) returns (CreateWorkflowResponse) {
		option (google.api.http) ={
			post: "/v1/workflow"
			body: "item"
		};
	}
}

message CreateWorkflowResponse {
  string id = 1;
}

message CreateWorkflowRequest {
	Workflow item = 1;
}

message Workflow {
	string name = 1;
	int32 id = 2;
	repeated Job jobs = 3;
	//google.protobuf.Timestamp created_at = 6;
	//google.protobuf.Timestamp updated_at = 7;
}

message Job {
	string name = 1;
	oneof executor {
		Docker docker = 2;
		Machine machine = 3;
	}
	repeated Step steps = 4;
	string env = 5;
	string branches = 6;
}

message Docker {
	string image = 1;
	string tags = 2;
}

message Machine {
	string os = 1;
	string cpu_cores = 2;
	string mem = 3;
}

message Step {
	oneof step_command {
		string key = 1;
		Command command = 2;
	}
}

message Command {
	string command = 1;
}